--- a/angular.json
+++ b/angular.json
@@ -26,12 +26,10 @@
             "styles": [
               "src/styles.scss",
               "./node_modules/swiper/css/swiper.css",
-              "./node_modules/@mdi/font/css/materialdesignicons.min.css",
-              "./node_modules/materialize-css/dist/css/materialize.min.css"
+              "./node_modules/@mdi/font/css/materialdesignicons.min.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/materialize-css/dist/js/materialize.min.js",
               "./node_modules/scrollreveal/dist/scrollreveal.min.js"
             ]
           },
