--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.1.0",
-    "@angular/cdk": "^8.2.3",
+    "@angular/cdk": "^9.2.0",
     "@angular/common": "^9.1.0",
     "@angular/compiler": "^9.1.0",
     "@angular/core": "^9.1.0",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "^9.1.0",
-    "@angular/material": "^8.2.3",
+    "@angular/material": "^9.2.0",
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
@@ -31,13 +32,11 @@
     "angulartics2": "^8.1.0",
     "animate.css": "3.7.2",
     "core-js": "^3.4.7",
-    "hammerjs": "^2.0.8",
     "mousetrap": "^1.6.3",
     "ng-scrollreveal": "^2.2.0",
     "ng2-meta": "^5.0.0",
     "ng2-parallaxscroll": "^2.2.1",
     "ng2-truncate": "^1.3.2",
-    "ngx-materialize": "^6.1.3",
     "rxjs": "~6.5.3",
     "rxjs-compat": "^6.5.3",
     "scrollreveal": "4.0.5",
